--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -15,27 +15,31 @@ body {
     color: var(--color-scheme-dark);
 }
    
-#section-hero{
+.section-hero{
     @include section-styling();
     height: 100vh;
     background-color: var(--color-scheme-main);
 }
-#section-about{
+.section-about{
     @include section-styling();
     height: 100vh;
     background-color: var(--color-scheme-light);
 }
-#section-portfolio{
+.section-portfolio{
     @include section-styling();
     height: 100vh;
     background-color: var(--color-scheme-bg);
 }
 
-#section-contact{
+.section-contact{
     @include section-styling();
     height: 50vh;
     background-color: var(--color-scheme-main);
 }
+
+    .content {
+        padding: 16px;
+      }
 
 h1{
     font-family: var(--font-family-header);
